tests/ui/return_type_mismatch.stderr
Error [E0113]: `answer` promises to return Int (a whole number), but this returns String (text)
  --> tests/ui/return_type_mismatch.jet:2:12
    |
  2 |     return "forty-two";
    |            ^^^^^^^^^^^
 Why: the value handed back must match the type after `->`
 Fix: use Int (a whole number) here
