tests/ui/return_type_mismatch.jet
fn answer() -> Int {
    return "forty-two";
}

fn main() {
    print(answer());
}
